--- a/news-list.html
+++ b/news-list.html
@@ -30,11 +30,11 @@
             <span class="pe-3 mob-close"><i class="icon-phone pe-2"></i>產後護理之家洽詢專線：(05)633-7333 轉 8535、8529</span>
             <!-- <a class="link-a mob-close" href="mailto:st-obs@mail.stjoho.org.tw"><i class="icon-mail_outline pe-2"></i>st-obs@mail.stjoho.org.tw</a> -->
           </div>
-          <div class="px-3 mob-close">
+          <!-- <div class="px-3 mob-close">
             <a class="link-a" href="https://www.facebook.com/people/%E8%99%8E%E5%B0%BE%E8%8B%A5%E7%91%9F%E7%94%A2%E5%BE%8C%E8%AD%B7%E7%90%86%E4%B9%8B%E5%AE%B6/100063928514038/" target="_blank"><i class="icon-social-facebook fs-4 pe-2"></i></a>
             <a class="link-a" href=""><i class="icon-line"></i></a>
           </div>
-          <div class="p-2 bg-orange text-white mob-close"><i class="icon-access_time pe-2"></i>營業時間：週一 ~ 週日 09:00-19:00</div>
+          <div class="p-2 bg-orange text-white mob-close"><i class="icon-access_time pe-2"></i>營業時間：週一 ~ 週日 09:00-19:00</div> -->
         </div>
       </div>
       
@@ -392,7 +392,7 @@
     <footer class="mt100">
       <div class="container-fluid bg-white p-3">
         <div class="bigBoxs position-relative">
-          <div class="bigBoxs position-absolute top-0 start-50 translate-middle reserveBoxs">
+          <!-- <div class="bigBoxs position-absolute top-0 start-50 translate-middle reserveBoxs">
             <div class="container-fluid px100">
               <div class="d-flex align-items-xl-center flex-column-mob">
                 <div class="p-2 flex-grow-1 ">
@@ -402,7 +402,7 @@
                 <div class="p-2"><a class="btn-o btn-o-100 float-xl-end px-5">聯絡我們</a></div>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <div class="container-fluid top115 pb-4">
             <div class="row">
