--- a/video.html
+++ b/video.html
@@ -27,7 +27,7 @@
       <div class="bigBoxs">
         <div class="d-flex text-white">
           <div class="p-2 flex-grow-1 ">
-            <span class="pe-3 mob-close"><i class="icon-phone pe-2"></i>產後護理之家洽詢專線：(05)633-7333 轉 8535、8529</span>
+            <span class="pe-3 mob-close"><i class="icon-phone pe-2"></i>骨鬆衛教諮詢專線：(05)633-7333 轉 2113</span>
             <!-- <a class="link-a mob-close" href="mailto:st-obs@mail.stjoho.org.tw"><i class="icon-mail_outline pe-2"></i>st-obs@mail.stjoho.org.tw</a> -->
           </div>
           <!-- <div class="px-3 mob-close">
@@ -500,7 +500,16 @@
 
           <div class="container-fluid top115 pb-4">
             <div class="row">
-              <div class="col-xl-3 col-12 pb-xl-0 pb-4 text-center2"><img src="images/footer-logop.png"></div>
+
+              <div class="col-xl-4 col-12 pb-xl-0 pb-4 text-center2">
+                <img src="images/footer-logop.png">
+                <!-- <div class="row">
+                  <div class="col-auto text-center"><img src="images/qr01.png" class="pt-4"><p class="pt-2">舐犢情深 LINE</p></div>
+                  <div class="col-auto text-center"><img src="images/qr02.png" class="pt-4 px-2"><p class="pt-2">產家 FB</p></div>
+                  <div class="col-auto text-center"><img src="images/qr03.png" class="pt-4"><p class="pt-2">官網</p></div>
+                </div> -->
+              </div>
+
               <div class="col-xl-4 col-12">
                 <p class="fs-4 fw-bold">INFOMATION</p>
                 <div class="brown-boxs me-3">
@@ -510,6 +519,7 @@
                   <span class="foter-text">Mail：<a href="mailto:st-obs@mail.stjoho.org.tw">st-obs@mail.stjoho.org.tw</a></span>
                 </div>
               </div>
+
               <div class="col-xl-4 mob-close">
                 <p class="fs-4 fw-bold">NAVIGATION</p>
                 <div class="brown-boxs me-3">
@@ -529,10 +539,10 @@
                   </div>
                 </div>
               </div>
-              <div class="col-xl-1 mob-close">
+              <!-- <div class="col-xl-1 mob-close">
                 <img src="images/qr01.png" class="pb-2">
                 <img src="images/qr02.png">
-              </div>
+              </div> -->
             </div>
           </div>
         </div>
