--- a/essay-list.html
+++ b/essay-list.html
@@ -30,7 +30,7 @@
     <div class="bigBoxs">
       <div class="d-flex text-white">
         <div class="p-2 flex-grow-1 ">
-          <span class="pe-3 mob-close"><i class="icon-phone pe-2"></i>產後護理之家洽詢專線：(05)633-7333 轉 8535、8529</span>
+          <span class="pe-3 mob-close"><i class="icon-phone pe-2"></i>骨鬆衛教諮詢專線：(05)633-7333 轉 2113</span>
           <!-- <a class="link-a mob-close" href="mailto:st-obs@mail.stjoho.org.tw"><i class="icon-mail_outline pe-2"></i>st-obs@mail.stjoho.org.tw</a> -->
         </div>
         <!-- <div class="px-3 mob-close">
@@ -412,63 +412,71 @@
   </div>
 
   <footer class="mt100">
-    <div class="container-fluid bg-white p-3">
-      <div class="bigBoxs position-relative">
-        <!-- <div class="bigBoxs position-absolute top-0 start-50 translate-middle reserveBoxs">
-          <div class="container-fluid px100">
-            <div class="d-flex align-items-xl-center flex-column-mob">
-              <div class="p-2 flex-grow-1 ">
-                <p class="text-white h1"><img src="images/date_range.svg" class="pe-3">預約參觀</p>
-                <p class="te-6">歡迎預約參觀若瑟產後護理之家</p>
+      <div class="container-fluid bg-white p-3">
+        <div class="bigBoxs position-relative">
+          <!-- <div class="bigBoxs position-absolute top-0 start-50 translate-middle reserveBoxs">
+            <div class="container-fluid px100">
+              <div class="d-flex align-items-xl-center flex-column-mob">
+                <div class="p-2 flex-grow-1 ">
+                  <p class="text-white h1"><img src="images/date_range.svg" class="pe-3">預約參觀</p>
+                  <p class="te-6">歡迎預約參觀若瑟產後護理之家</p>
+                </div>
+                <div class="p-2"><a class="btn-o btn-o-100 float-xl-end px-5">聯絡我們</a></div>
               </div>
-              <div class="p-2"><a class="btn-o btn-o-100 float-xl-end px-5">聯絡我們</a></div>
             </div>
-          </div>
-        </div> -->
+          </div> -->
 
-        <div class="container-fluid top115 pb-4">
-          <div class="row">
-            <div class="col-xl-3 col-12 pb-xl-0 pb-4 text-center2"><img src="images/footer-logop.png"></div>
-            <div class="col-xl-4 col-12">
-              <p class="fs-4 fw-bold">INFOMATION</p>
-              <div class="brown-boxs me-3">
-                <span class="foter-text"><i class="bi bi-clock pe-2"></i>營業時間：週一 ~ 週日 09:00-18:00</span>
-                <span class="foter-text">TEL：(05) 700-2656</span>
-                <span class="foter-text">ADD：632雲林縣虎尾鎮民權路2號5樓</span>
-                <span class="foter-text">Mail：<a
-                    href="mailto:st-obs@mail.stjoho.org.tw">st-obs@mail.stjoho.org.tw</a></span>
+          <div class="container-fluid top115 pb-4">
+            <div class="row">
+
+              <div class="col-xl-4 col-12 pb-xl-0 pb-4 text-center2">
+                <img src="images/footer-logop.png">
+                <!-- <div class="row">
+                  <div class="col-auto text-center"><img src="images/qr01.png" class="pt-4"><p class="pt-2">舐犢情深 LINE</p></div>
+                  <div class="col-auto text-center"><img src="images/qr02.png" class="pt-4 px-2"><p class="pt-2">產家 FB</p></div>
+                  <div class="col-auto text-center"><img src="images/qr03.png" class="pt-4"><p class="pt-2">官網</p></div>
+                </div> -->
               </div>
-            </div>
-            <div class="col-xl-4 mob-close">
-              <p class="fs-4 fw-bold">NAVIGATION</p>
-              <div class="brown-boxs me-3">
-                <div class="row">
-                  <div class="col-4"><a href="03000.html" class='footer-link'>最新消息</a></div>
-                  <div class="col-4"><a href="04010.html" class='footer-link'>產後護理之家</a></div>
-                  <div class="col-4"><a href="05000.html" class='footer-link'>營養</a></div>
-                  <div class="col-4"><a href="01000.html" class='footer-link'>母嬰親善</a></div>
-                  <div class="col-4"><a href="02000.html" class='footer-link'>母嬰用品櫥窗</a></div>
-                  <div class="col-4"><a href="06000.html" class='footer-link'>產檢專區</a></div>
-                  <div class="col-4"><a href="#" class='footer-link'>網路掛號</a></div>
-                  <div class="col-4"><a href="#" class='footer-link'>看診進度</a></div>
-                  <div class="col-4"><a href="07000.html" class='footer-link'>更多資訊...</a></div>
-                  <div class="col-4"><a href="#" class='footer-link'>使用條款</a></div>
-                  <div class="col-4"><a href="#" class='footer-link'>免責聲明</a></div>
-                  <div class="col-4"></div>
+
+              <div class="col-xl-4 col-12">
+                <p class="fs-4 fw-bold">INFOMATION</p>
+                <div class="brown-boxs me-3">
+                  <span class="foter-text"><i class="bi bi-clock pe-2"></i>營業時間：週一 ~ 週日 09:00-18:00</span>
+                  <span class="foter-text">TEL：(05) 700-2656</span>
+                  <span class="foter-text">ADD：632雲林縣虎尾鎮民權路2號5樓</span>
+                  <span class="foter-text">Mail：<a href="mailto:st-obs@mail.stjoho.org.tw">st-obs@mail.stjoho.org.tw</a></span>
                 </div>
               </div>
-            </div>
-            <div class="col-xl-1 mob-close">
-              <img src="images/qr01.png" class="pb-2">
-              <img src="images/qr02.png">
+
+              <div class="col-xl-4 mob-close">
+                <p class="fs-4 fw-bold">NAVIGATION</p>
+                <div class="brown-boxs me-3">
+                  <div class="row">
+                    <div class="col-4"><a href="03000.html" class='footer-link'>最新消息</a></div>
+                    <div class="col-4"><a href="04010.html" class='footer-link'>產後護理之家</a></div>
+                    <div class="col-4"><a href="05000.html" class='footer-link'>營養</a></div>
+                    <div class="col-4"><a href="01000.html" class='footer-link'>母嬰親善</a></div>
+                    <div class="col-4"><a href="02000.html" class='footer-link'>母嬰用品櫥窗</a></div>
+                    <div class="col-4"><a href="06000.html" class='footer-link'>產檢專區</a></div>
+                    <div class="col-4"><a href="#" class='footer-link'>網路掛號</a></div>
+                    <div class="col-4"><a href="#" class='footer-link'>看診進度</a></div>
+                    <div class="col-4"><a href="07000.html" class='footer-link'>更多資訊...</a></div>
+                    <div class="col-4"><a href="#" class='footer-link'>使用條款</a></div>
+                    <div class="col-4"><a href="#" class='footer-link'>免責聲明</a></div>
+                    <div class="col-4"></div>
+                  </div>
+                </div>
+              </div>
+              <!-- <div class="col-xl-1 mob-close">
+                <img src="images/qr01.png" class="pb-2">
+                <img src="images/qr02.png">
+              </div> -->
             </div>
           </div>
         </div>
       </div>
-    </div>
-    <p class="text-center p-4">版權所有 © 2023 天主教若瑟醫療財團法人若瑟醫院 Copyright © St.Joseph's Hospital. All Rights Reserved.
-    </p>
-  </footer>
+      <p class="text-center p-4">版權所有 © 2023 天主教若瑟醫療財團法人若瑟醫院 Copyright © St.Joseph's Hospital. All Rights Reserved.</p>
+    </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
