--- a/news-list.html
+++ b/news-list.html
@@ -27,7 +27,7 @@
       <div class="bigBoxs">
         <div class="d-flex text-white">
           <div class="p-2 flex-grow-1 ">
-            <span class="pe-3 mob-close"><i class="icon-phone pe-2"></i>產後護理之家洽詢專線：(05)633-7333 轉 8535、8529</span>
+            <span class="pe-3 mob-close"><i class="icon-phone pe-2"></i>骨鬆衛教諮詢專線：(05)633-7333 轉 2113</span>
             <!-- <a class="link-a mob-close" href="mailto:st-obs@mail.stjoho.org.tw"><i class="icon-mail_outline pe-2"></i>st-obs@mail.stjoho.org.tw</a> -->
           </div>
           <!-- <div class="px-3 mob-close">
@@ -409,24 +409,20 @@
 
               <div class="col-xl-4 col-12 pb-xl-0 pb-4 text-center2">
                 <img src="images/footer-logop.png">
-                <div class="row">
+                <!-- <div class="row">
                   <div class="col-auto text-center"><img src="images/qr01.png" class="pt-4"><p class="pt-2">舐犢情深 LINE</p></div>
                   <div class="col-auto text-center"><img src="images/qr02.png" class="pt-4 px-2"><p class="pt-2">產家 FB</p></div>
                   <div class="col-auto text-center"><img src="images/qr03.png" class="pt-4"><p class="pt-2">官網</p></div>
-                </div>
+                </div> -->
               </div>
 
               <div class="col-xl-4 col-12">
                 <p class="fs-4 fw-bold">INFOMATION</p>
                 <div class="brown-boxs me-3">
-                  <!-- <span class="foter-text"><i class="bi bi-clock pe-2"></i>營業時間：週一 ~ 週日 09:00-19:00</span> -->
-                  <span class="foter-text">母乳諮詢專線</span>
-                  <span class="foter-text">・24小時：</span>
-                  <span class="foter-text">&nbsp;&nbsp;&nbsp;&nbsp;05-6337333 轉 8558 或 2432</span>
-                  <span class="foter-text">&nbsp;&nbsp;&nbsp;&nbsp;05-7002656(台語諧音:養ㄋㄟㄋㄟ您來我來)</span>
-                  <span class="foter-text">・周一至周五 8:00~17:00：</span>
-                  <span class="foter-text">&nbsp;&nbsp;&nbsp;&nbsp;05-6337333 轉 8362</span>
-                  <!-- <span class="foter-text">ADD：雲林縣虎尾鎮新生路74號</span> -->
+                  <span class="foter-text"><i class="bi bi-clock pe-2"></i>營業時間：週一 ~ 週日 09:00-18:00</span>
+                  <span class="foter-text">TEL：(05) 700-2656</span>
+                  <span class="foter-text">ADD：632雲林縣虎尾鎮民權路2號5樓</span>
+                  <span class="foter-text">Mail：<a href="mailto:st-obs@mail.stjoho.org.tw">st-obs@mail.stjoho.org.tw</a></span>
                 </div>
               </div>
 
