--- a/news-detail.html
+++ b/news-detail.html
@@ -312,10 +312,9 @@
               <div class="col-xl-4 col-12">
                 <p class="fs-4 fw-bold">INFOMATION</p>
                 <div class="brown-boxs me-3">
-                  <span class="foter-text"><i class="bi bi-clock pe-2"></i>營業時間：週一 ~ 週日 09:00-18:00</span>
-                  <span class="foter-text">TEL：(05) 700-2656</span>
-                  <span class="foter-text">ADD：632雲林縣虎尾鎮民權路2號5樓</span>
-                  <span class="foter-text">Mail：<a href="mailto:st-obs@mail.stjoho.org.tw">st-obs@mail.stjoho.org.tw</a></span>
+                  <span class="foter-text"><i class="bi bi-clock pe-2"></i>營業時間：週一 ~ 週五 08:00-12:00；13:00-17:30(週二、三、五下午休診)</span>
+                  <span class="foter-text">TEL：(05) 6337-3335轉2113</span>
+                  <span class="foter-text">ADD：632雲林縣虎尾鎮新生路74號1樓</span>
                 </div>
               </div>
 
